add set_result_to_div(), clear_result_div()

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <button id="delete_publisher" onclick="delete_publisher();">delete</button>
         <button id="update_publisher" onclick="update_publisher();">update</button>
         <button id="get_publisher" onclick="get_publisher();">get by id</button>
+        <button id="get_all_publisher" onclick="get_all_publishers();">view all</button>
     </p><br>
     <div id="result_publisher"> </div>
 </div>
@@ -86,5 +87,7 @@
 <script src = "book.js"></script>
 <script src = "genre.js"></script>
 <script src = "format.js"></script>
+<script src = "author.js"></script>
+<script src = "publisher.js"></script>
 </body>
 </html>
