add view all functions

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <button id="delete_book" onclick="delete_book();">delete</button>
         <button id="update_book" onclick="update_book();">update</button>
         <button id="get_book" onclick="get_book();">get by id</button>
+        <button id="get_all_books" onclick="get_all_books();">view all</button>
     </p><br>
     <div id="result_book"></div>
 </div>
@@ -32,6 +33,7 @@
         <button id="delete_genre" onclick="delete_genre();">delete</button>
         <button id="update_genre" onclick="update_genre();">update</button>
         <button id="get_genre" onclick="get_genre();">get by id</button>
+        <button id="get_all_genres" onclick="get_all_genres();">view all</button>
     </p><br>
     <div id="result_genre"> </div>
 </div>
@@ -44,6 +46,7 @@
         <button id="delete_format" onclick="delete_format();">delete</button>
         <button id="update_format" onclick="update_format();">update</button>
         <button id="get_format" onclick="get_format();">get by id</button>
+        <button id="get_all_formats" onclick="get_all_formats();">view all</button>
     </p><br>
     <div id="result_format"> </div>
 </div>
@@ -58,6 +61,7 @@
         <button id="delete_author" onclick="delete_author();">delete</button>
         <button id="update_author" onclick="update_author();">update</button>
         <button id="get_author" onclick="get_author();">get by id</button>
+        <button id="get_all_authors" onclick="get_all_authors();">view all</button>
     </p><br>
     <div id="result_author"> </div>
 </div>
@@ -73,7 +77,7 @@
         <button id="delete_publisher" onclick="delete_publisher();">delete</button>
         <button id="update_publisher" onclick="update_publisher();">update</button>
         <button id="get_publisher" onclick="get_publisher();">get by id</button>
-        <button id="get_all_publisher" onclick="get_all_publishers();">view all</button>
+        <button id="get_all_publishers" onclick="get_all_publishers();">view all</button>
     </p><br>
     <div id="result_publisher"> </div>
 </div>
